# ehr2meds

./: .env  .gitignore  README.md  environment.yaml  make_synthetic_data.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yml  pipeline.yml  unittests.yml
MEDS/MEDS_tabs/: run_tabs.sh  start_job.ipynb
MEDS/MEDS_transform/: run_MEDS_transform.sh  start_job.ipynb
MEDS/MEDS_transform/configs/: event_configs.yaml  extract_SP.yaml
MEDS_preprocess/: main.py  main_azure.py  main_normalise.py  run_remote.py
MEDS_preprocess/azure_run/: __init__.py  backup.py  model.py  run.py  validation.py
MEDS_preprocess/configs/: MEDS.yaml  MEDS_local.yaml  normalise.yaml
MEDS_preprocess/preprocessing/io/: data_handling.py
MEDS_preprocess/preprocessing/premeds/: concept_funcs.py  concepts.py  extractor.py
MEDS_preprocess/preprocessors/: azure.py  azure_load.py  concept_processor.py  concept_processor_utils.py  constants.py  helpers.py  load.py  normaliser.py  preMEDS.py
configs/: root_config.yaml
configs/MEDS/: default_event.yaml  fetal_SP.yaml  fetal_ngc_event.yaml  lymphoma_ngc_event.yaml
configs/preMEDS/: example.yaml  fetal_SP.yaml  fetal_SP_synth.yaml  fetal_ngc.yaml  lymphoma_ngc.yaml  normalise.yaml  normalize.yaml  phair_light.yaml
configs/synthetic_generation/: dst.yaml  fetal_SDS.yaml  fetal_SDS_SP_from_pop_part1.yaml  fetal_SDS_SP_from_pop_part2.yaml  fetal_SDS_SP_from_pop_part3.yaml  fetal_SP.yaml  skin_cancer.yaml
ehr2meds/: convert_premeds_to_meds.sh  convert_raw_to_premeds.py  first_test_nb.ipynb  generate_synthetic_raw_data.py  make_split_file.py  make_synthetic_data.md  normalise_premeds.py  normalize_premeds.py  paths.py  synthetic_data.md
ehr2meds/MEDS/MEDS_tabs/: task_example.sh
ehr2meds/MEDS/MEDS_tabs_aces/: start_job.ipynb
ehr2meds/MEDS/MEDS_transform/: README.md  expand_config.py  make_env.py  run.py  run.sh  start_job.ipynb
ehr2meds/MEDS/envs/: MEDS_dev.yaml  MEDS_tabs.yaml  MEDS_transform.yaml
ehr2meds/PREMEDS/: README.md  extract_lab_dist.py  main_azure.py  main_normalise.py  main_run.py  requirements.txt  run_remote.py
ehr2meds/PREMEDS/azure/: README.md  __main__.py  util.py
ehr2meds/PREMEDS/azure_run/: __init__.py  backup.py  run.py
ehr2meds/PREMEDS/configs/: MEDS.yaml  MEDS_azure.yaml  MEDS_azure_sdkv2.yaml  MEDS_local.yaml  extract.yaml  normalise.yaml
ehr2meds/PREMEDS/preprocessing/: constants.py
ehr2meds/azure/: readme.md
ehr2meds/configs/MEDS/: default_pipeline.yaml
ehr2meds/configs/preMEDS/: fetal_SP.yaml
ehr2meds/configs/synthetic_generation/: dst.yaml  fetal_SDS.yaml  fetal_SP.yaml
ehr2meds/data/: README.md
ehr2meds/data/corruption/: helpers.py
ehr2meds/data/extraction/: SP.yaml  collapse_helpers.py  example_SP.yaml  extract_data.py  extract_helpers.py  filter_helpers.py  make_table.py  summarise_table.py
ehr2meds/data/generation/: dst.yaml  fetal.yaml  fetal_SDS.yaml  fetal_SP copy.yaml  fetal_SP.yaml  fetal_overview.yaml  helpers.py  skin_cancer.yaml  standard.py  standard_with_linking.py
ehr2meds/data/summary/: extract_helpers.py  fetal_SP.yaml  fetal_example.yaml  filter_helpers.py  make_table.py
ehr2meds/example_configs/NGC_SP/: premeds.yaml
ehr2meds/example_configs/meds/: event.yaml  event_minimal.yaml  run.yaml
ehr2meds/example_configs/premeds/: full.yaml  minimal.yaml  normalise.yaml
ehr2meds/preMEDS/: concept_processors.py  data_handler.py  dataloading.py  extractor.py  normaliser.py  normalizer.py  processors.py  utils.py
ehr2meds/synthea_configs/meds/: event_minimal.yaml  pipeline.yaml
ehr2meds/synthetic_data_generation/: README.md  corrupt.py  generate.py
resources/: shak_to_region.parquet
tests/: constants.py  generate_example_data.py  look_at_file.ipynb  notebook.ipynb
tests/example_data/: concept.diagnosis.csv  concept.labtest.csv  concept.medication.csv  concept.procedure.csv  concept.register_diagnosis.csv  patients_info.csv
tests/generate_example_data/: constants.py  generate_example_data.py  helpers.py  registers.py  sp.py
tests/test_PREMEDS/: test_concept_processor.py  test_meds_preprocessor.py
tests/test_preprocessors/: test_concept_processor.py  test_meds_preprocessor.py
(+283 files in other folders)
