[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr2meds"
dynamic = ["version"]
description = "A preprocessing pipeline for electronic health records."
authors = [
    { name = "Kiril Klein", email = "kikl@di.ku.dk" },
    { name = "Mikkel Odgaard" },
    { name = "Maria Montgomery" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "fastparquet",
    "meds==0.3.3",
    "meds-transforms==0.1.1",
    "meds_reader",
    "torch",
    "ruff==0.15.1",
    "dotenv==0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]