[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr2meds"
dynamic = ["version"]
description = "A preprocessing pipeline for electronic health records."
authors = [
    { name = "Kiril Klein", email = "kikl@di.ku.dk" },
    { name = "Mikkel Odgaard" },
    { name = "Maria Montgomery" }
]
# Project is intended to run on Python 3.12 only.
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "tqdm",
    "fastparquet",
    "meds==0.3.3",
    "meds-transforms==0.1.1",
    "meds_reader",
    "torch",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.15.1",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]


[tool.ruff]
line-length = 127


[tool.ruff.lint]
# "E": style/error codes (PEP 8–type errors, e.g. if x == None).
# "F": Pyflakes-style errors (unused variables, undefined names, etc.).
# "I": import-related issues (import order, duplicates, etc.).
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
no-sections = true
combine-as-imports = true

[tool.ruff.format]
# quote-style = "double": Ruff prefers " over ' when it reformats strings, as long as it’s safe.
# indent-style = "space": indentation uses spaces, not tabs.
quote-style = "double"
indent-style = "space"